# deflekt

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  GEMINI.md  PORTFOLIO_RESUME_LINKEDIN_MARKETING.md  README.md  RESUME_UPDATED.tex  ROADMAP.md  VIDEO_DEMO_AND_DOCUMENTATION_PLAYBOOK.md  docker-compose.prod.yml  docker-compose.yml  fix_aschild.py  locustfile.py  package-lock.json  package.json  test_widget.html
.github/workflows/: ci.yml
ai-service/: .dockerignore  Dockerfile  cache.py  celery_app.py  chat.py  db.py  ingestion.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval.py
ai-service/evals/: golden_set.json  run.py
ai-service/tests/: test_health.py
app/: Dockerfile  locustfile.py  package-lock.json  package.json  test_db.js
app/public/: widget.js
app/scripts/: migrate.mjs
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(auth)/: layout.tsx
app/src/app/(auth)/forgot-password/: page.tsx
app/src/app/(dashboard)/: layout.tsx  logout-button.tsx
app/src/app/(public)/: layout.tsx  page.tsx
app/src/app/actions/: escalations.ts
app/src/app/widget/: page.tsx
app/src/components/: playground-chat.tsx
app/src/components/providers/: auth-provider.tsx
app/src/lib/: env.ts  storage.ts
app/src/lib/auth/: guards.ts  session.ts  tokens.ts
app/src/lib/db/: index.ts  schema.ts
app/src/tests/: chat.test.ts  workspace-isolation.test.ts
db/: init.sql  rds-setup.sql
docs/: 01-prd-support-deflection-engine.md
nginx/: nginx.conf
scripts/: load_test.py
(+31 files in other folders)
