[project]
name = "deflekt-ai-service"
version = "0.1.0"
description = "Deflekt AI Service — ingestion, retrieval, rerank, answer, evals"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
